--- a/css/uikit.css
+++ b/css/uikit.css
@@ -275,6 +275,8 @@ input[type="submit"] {
 button:disabled,
 html input:disabled {
   cursor: default;
+  
+  color:#da314b;
 }
 /*
  * Removes inner padding and border in Firefox 4+.
